--- a/3.html
+++ b/3.html
@@ -13,8 +13,9 @@
         gtag('config', 'G-HLFVQ9SEY2');
         </script>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <link rel="stylesheet" href="style.css">
-    </head>
+
 
     <body>
 
